add publih workflow

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,15 +16,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - name: Install rust toolchain
-      uses: actions-rs/toolchain@v1
+    - name: Setup Rust
+      uses: './.github/actions/setup'
       with:
+        os: ${{ runner.os }}
         toolchain: nightly
         components: clippy,rustfmt
-        override: true
-        profile: minimal
 
     - name: Run cargo test
       uses: actions-rs/cargo@v1
