--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,15 +30,18 @@ jobs:
       with:
         command: test
         args: --verbose --all-targets --all-features
+        toolchain: nightly
 
     - name: Run cargo clippy
       uses: actions-rs/clippy-check@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         args: --all-targets --all-features -- -D warnings
+        toolchain: nightly
 
     - name: Run cargo fmt
       uses: actions-rs/cargo@v1
       with:
         command: fmt
         args: -- --check
+        toolchain: nightly
